--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: DOPE
 Type: Package
-Title: What the package does (short line)
-Version: 1.0
-Date: 2018-07-09
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Title: Distributions of Possible Effects
+Version: 1.1.0
+Date: 2020-04-01
+Author: Christopher Schwarz
+Maintainer: Christopher Schwarz <cschwarz@nyu.edu>
+Description: Functions for generating, plotting, and describing distributions of possible effects for agnostic sensitivity analysis.
+License: GPL-2
+Depends: doSNOW, doParallel, foreach, ggplot2, ggpmisc, grid, gridExtra, gridtext
 Imports: Rcpp (>= 0.12.17)
 LinkingTo: Rcpp, RcppArmadillo
